[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/UI/Profiles/Profile.gd" type="Script" id=1]
[ext_resource path="res://src/UI/Commons/Button/GenericButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/UI/Commons/Navigation/NavigationButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/UI/Profiles/NewProfileNavigationButton.gd" type="Script" id=4]
[ext_resource path="res://src/UI/Profiles/LoadProfileNavigationButton.gd" type="Script" id=5]
[ext_resource path="res://src/UI/Profiles/EraseProfileButton.gd" type="Script" id=6]
[ext_resource path="res://src/UI/Profiles/Playtime.gd" type="Script" id=7]

[node name="Profile" type="HBoxContainer"]
margin_right = 440.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 40 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadProfile" parent="." instance=ExtResource( 2 )]
margin_right = 158.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
script = ExtResource( 5 )
navigate_to = "WorldmapPage"

[node name="MarginContainer" type="MarginContainer" parent="LoadProfile"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 8
custom_constants/margin_top = 4
custom_constants/margin_left = 8
custom_constants/margin_bottom = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="LoadProfile/MarginContainer"]
margin_left = 8.0
margin_top = 4.0
margin_right = 236.0
margin_bottom = 36.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Row1" type="HBoxContainer" parent="LoadProfile/MarginContainer/VBoxContainer"]
margin_right = 228.0
margin_bottom = 14.0
mouse_filter = 2

[node name="ProfileName" type="Label" parent="LoadProfile/MarginContainer/VBoxContainer/Row1"]
margin_right = 83.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.984314, 0.94902, 0.211765, 1 )
text = "Profile Name"

[node name="Separator" type="Label" parent="LoadProfile/MarginContainer/VBoxContainer/Row1"]
margin_left = 87.0
margin_right = 92.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.984314, 0.94902, 0.211765, 1 )
text = "-"

[node name="Level" type="Label" parent="LoadProfile/MarginContainer/VBoxContainer/Row1"]
margin_left = 96.0
margin_right = 172.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.984314, 0.94902, 0.211765, 1 )
text = "profile.level"

[node name="Row2" type="HBoxContainer" parent="LoadProfile/MarginContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 228.0
margin_bottom = 32.0
mouse_filter = 2

[node name="Playtime" type="Label" parent="LoadProfile/MarginContainer/VBoxContainer/Row2"]
margin_right = 101.0
margin_bottom = 14.0
text = "profile.playtime"
script = ExtResource( 7 )

[node name="Separator" type="Label" parent="LoadProfile/MarginContainer/VBoxContainer/Row2"]
margin_left = 105.0
margin_right = 110.0
margin_bottom = 14.0
text = "-"

[node name="Completed" type="Label" parent="LoadProfile/MarginContainer/VBoxContainer/Row2"]
margin_left = 114.0
margin_right = 228.0
margin_bottom = 14.0
text = "profile.completed"

[node name="NewProfile" parent="." instance=ExtResource( 3 )]
margin_left = 162.0
margin_right = 321.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "profile.new_game"
script = ExtResource( 4 )
navigate_to = "NewProfilePage"

[node name="Erase" parent="." instance=ExtResource( 2 )]
margin_left = 325.0
margin_right = 440.0
margin_bottom = 40.0
rect_min_size = Vector2( 64, 32 )
text = "commons.erase"
script = ExtResource( 6 )
